# Projet-developpement

./: README.md  poetry.lock.old  pyproject.toml  requirements.txt  requirements.txt.txt
.github/workflows/: main.yml
docs/: README.md
src/: data_preprocessing.py  model_evaluation.py  model_training.py
tests/: test_data_preprocessing.py  test_model_evaluation.py  test_model_training.py
