[project]
name = "projet-sae-developpement"
version = "0.1.0"
description = "Organisation des fichiers du projet SAE developpement en un projet reproductible"
authors = [
    {name = "Patrick CHEN",email = "patrick.chen2@etu.u-paris.fr"},
    {name = "Baptiste TIVRIER",email = "baptiste.tivrier@etu.u-paris.fr"},
    {name = "Dan SEBAG",email = "dan.sebag@etu.u-paris.fr"},
    {name = "Gaspard LUGAT",email = "gaspard.lugat@etu.u-paris.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

